# snotify

./: Cargo.toml
data/: bigp.json  test.json
src/: lib.rs  main.rs  mock.rs
tests/: save_and_load_playlist_test.rs
