[package]
name = "snotify"
version = "0.1.0"
edition = "2021"
default-run = "snotify"

[dependencies]
rand = "0.8.5"
rspotify = { version = "0.16.1", features = ["client-reqwest", "env-file", "cli"] }
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1"
reqwest = "0.12"
env_logger = { version = "0.11.0", default-features = false }
